@@ -1,4 +1,7 @@
 2007-10-26:
+	* src/v5.c: change internally-used ccaches from FILE: to MEMORY:
+
+2007-10-26:
 	* src/stash.c(_pam_krb5_stash_cc_copy): don't nuke the new ccache
 	on failure iterating it, the parent will for any error.
 	* src/stash.c: obey the ccname_template when we clone for the user,
